--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -8,6 +8,6 @@ footer {
     align-items: center;
     justify-content: center;
     display: flex;
-    border-top: 1px #CCCCCC;
+    border-top: 1px solid #CCCCCC;
 
 }
