--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -6,8 +6,8 @@ body {
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .container {
-    width: 1000px;
+    max-width: 1000px;
+    margin: 30px auto;
     margin-top: 30px;
-    margin-bottom: 30px auto;
-    
+    margin-bottom: 30px;
 }
