--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,21 +1,33 @@
+
 section.filters {
-    color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
+	background-color: #FFFFFF;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+    display: inline-flex;
+	position: relative;
+	justify-content: flex-end;
+	align-items: center;
+	margin: 100px;
 }
+
 section.filters button {
-    font-size: 18px;
-    color: #FFFFFF;
-    background-color: #FF5A5F;
-    height: 48px;
-    width: 20%;
-    border: 0;
-    border-radius: 4px;
-    margin: 30px auto;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	font-size: 18px;
+	margin-right: 30px;
+	border: none;
+	border-radius: 4px;
+	vertical-align: center;
+	position: absolute;
+	justify-items: auto;
+	opacity: 1;
+	
 }
+
 section.filters button:hover {
-    opacity: 90%;
+	opacity: 0.9;
 }
