--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,35 +1,52 @@
 section.filters {
-    color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
+    background-color: #FFFFFF;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+    display: inline-flex;
+	position: relative;
+	justify-content: flex-end;
+	align-items: center;
+	margin: 100px;
 }
 section.filters button {
-    font-size: 18px;
-    color: #FFFFFF;
     background-color: #FF5A5F;
-    height: 48px;
-    width: 20%;
-    border: 0;
-    border-radius: 4px;
-    margin: 30px auto;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	font-size: 18px;
+	margin-right: 30px;
+	border: none;
+	border-radius: 4px;
+	vertical-align: center;
+	position: absolute;
+	justify-items: auto;
+	opacity: 1;
 }
 section.filters button:hover {
-    opacity: 90%;
+    opacity: 0.9;
 }
 section.filters div.locations, section.filters div.amenities {
     border-right: 1px solid #DDDDDD;
     height: 100%;
     width: 25%;
+    border-bottom: 2px;
+    margin: auto;
+    text-align: center;
+    margin-left: 5%;
+    border-right-width: 1px;
+    border-right-style: solid;
+    border-spacing: 25%;
 }
-div.locations h3, div.amenities h4 {
+div.locations h3, div.amenities h3 {
     font-weight: 600;
-    margin-bottom: 0px;
+    margin-top: 10px;
+    
 }
 div.locations h4, div.amenities h4 {
     font-weight: 400;
     font-size: 14px;
-    margin: 4px auto;
+    text-align: left;
+    margin: auto;
 }
